--- a/views/keynotes/index.ejs
+++ b/views/keynotes/index.ejs
@@ -42,6 +42,7 @@
       <button id="record" class="btn btn-lg btn-outline-light record control-button">REC.</button>
       <button id="stop" class="btn btn-lg btn-outline-light record control-button hide">STOP</button>
       <button id="play-record" class="btn btn-lg btn-outline-light record control-button hide">PLAY REC.</button>
+      <button id="back" class="btn btn-lg btn-outline-light record control-button hide">BACK</button>
     </div>
   </div>
 
