--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplateHome') %>
-    <h1>Daniel Badura</h1>
+    <h1 class="rainbow-text">Daniel Badura</h1>
 
-    <ul> Lista projektów:
+    <ul class="rainbow-text"> Lista projektów:
         <li>
             <a href="/widoczki">Widoczki</a>
         </li>
