--- a/views/partials/navbarHome.ejs
+++ b/views/partials/navbarHome.ejs
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-blue bg-dark">
-    <div class="container-fluid">
+    <div class="container-fluid rainbow-text" >
         <a class="navbar-brand" href="/">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+        <div  class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav" >
                 <!-- <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./">Strona Główna</a>
                 </li> -->
