--- a/views/template/index.html
+++ b/views/template/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>The Website</title>
+    <title>Daniel's Portfolio</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -42,7 +42,7 @@
 
             <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                 <!-- <nav id="navbar" class="navbar bg-dark navbar-expand-lg navbar-dark"> -->
-                <a class="navbar-brand" href="">The Website</a>
+                <a class="navbar-brand" href="">Daniel's Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
