--- a/views/layouts/boilerplateCalculator.ejs
+++ b/views/layouts/boilerplateCalculator.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../styles/home.css"> -->
-    <title>Piano Key</title>
+    <title>Simple Calculator</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -34,20 +34,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <!-- stylesheets -->
-    <link rel="stylesheet" href="/public/assets/styles/keynotes.css" type="text/css">
+    <link rel="stylesheet" href="/public/assets/styles/calculator.css" type="text/css">
     <!-- favicon.svg -->
-    <link rel="shortcut icon" href="./images/favicon.svg">
-    <link rel="icon" href="/favicon.svg" />
+    <!-- <link rel="shortcut icon" href="./images/favicon.svg"> -->
 
 </head>
 </head>
 
 <body class="d-flex flex-column">
-    <%- include('../partials/navbarKeynotes') %>
+    <%- include('../partials/navbarHome') %>
         <%- body %>
             </main>
             <footer class="footer"> Daniel Badura Portfolio Project® 2021</footer>
-            <script src="/public/assets/scripts/keynotes.js"></script>
+            <script src="/public/assets/scripts/calculator.js"></script>
             <script src="https://code.jquery.com/jquery-3.6.0.js"
                 integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
