--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,7 +1,8 @@
 <% layout('layouts/boilerplateHome') %>
-    <h1 class="rainbow-text">Daniel Badura</h1>
+<div class="main-container">
+    <h1 >Daniel Badura</h1>
 
-    <ul class="rainbow-text"> Lista projektów:
+    <ul class="list-unstyled"> Lista projektów:
         <li>
             <a href="/widoczki">Widoczki</a>
         </li>
@@ -18,3 +19,4 @@
             <a href="/"> </a>
         </li>
     </ul>
+</div>
