--- a/views/partials/navbarHome.ejs
+++ b/views/partials/navbarHome.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-blue bg-dark">
-    <div class="container-fluid rainbow-text" >
+    <div class="container-fluid flame-text" >
         <a class="navbar-brand" href="/">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -11,13 +11,13 @@
                     <a class="nav-link active" aria-current="page" href="./">Strona Główna</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="">Witaj</a>
+                    <a class="nav-link disabled" href="">logowanie</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="">W mojej</a>
+                    <a class="nav-link disabled" href="">rejestracja</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="" tabindex="-1" aria-disabled="true">Kuchni</a>
+                    <a class="nav-link disabled" href="" tabindex="-1" aria-disabled="true">o mnie</a>
                 </li>
             </ul>
         </div>
