--- a/views/widoczki/edit.ejs
+++ b/views/widoczki/edit.ejs
@@ -46,7 +46,7 @@
                 <!-- OPIS -->
                 <div class="mb-3">
                     <label class="form-label" for="description">Opis</label>
-                    <textarea class="form-control" type="text" id="description" name="widoczek[description]" value="<%= widoczek.description %>" required></textarea>
+                    <textarea class="form-control" type="text" id="description" name="widoczek[description]" required><%= widoczek.description %></textarea>
                     <div class="valid-feedback green">
                         Dobrze!
                     </div>
@@ -58,26 +58,3 @@
             <a class="mb-3" href="/widoczki/<%= widoczek._id %>">Wróć do widoczku</a>
         </div>
     </div>
-
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict'
-
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            const forms = document.querySelectorAll('.validated-form')
-
-            // Loop over them and prevent submission
-            Array.from(forms)
-                .forEach(function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
-
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-        })()
-    </script>
