--- a/views/layouts/boilerplateCalculator.ejs
+++ b/views/layouts/boilerplateCalculator.ejs
@@ -43,6 +43,7 @@
 
 <body class="d-flex flex-column">
     <%- include('../partials/navbarHome') %>
+    <main class="container"></main>
         <%- body %>
             </main>
             <footer class="footer"> Daniel Badura Portfolio Project® 2021</footer>
