--- a/views/layouts/boilerplateKeynotes.ejs
+++ b/views/layouts/boilerplateKeynotes.ejs
@@ -43,7 +43,9 @@
 </head>
 
 <body class="d-flex flex-column">
+
     <%- include('../partials/navbarKeynotes') %>
+        <main class="container"></main>
         <%- body %>
             </main>
             <footer class="footer"> Daniel Badura Portfolio Project® 2021</footer>
