--- a/views/layouts/boilerplateWidoczki.ejs
+++ b/views/layouts/boilerplateWidoczki.ejs
@@ -9,12 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/assets/styles/widoczki.css">
+    <script src="/public/assets/scripts/widoczki.js"></script>
 </head>
 
 <body class="d-flex flex-column">
     
-    <main>
+    
        <%- include('../partials/navbarWidoczki') %>
+    <main class="container">
         <%- body %>
     </main>
 
