--- a/views/layouts/boilerplateHome.ejs
+++ b/views/layouts/boilerplateHome.ejs
@@ -14,6 +14,7 @@
 
 <body class="d-flex flex-column">
     <%- include('../partials/navbarHome') %>
+    <main class="container"></main>
            <%- body %>
     </main>
     <footer class="footer"> Daniel Badura Portfolio Project® 2021</footer>
