Added express-session and cookie parser to the project

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,6 +1,6 @@
 <% layout('layouts/boilerplateHome') %>
 <div class="main-container">
-    <h1 >Daniel Badura</h1>
+    <h1 class="flame-text">Daniel Badura</h1>
 
     <ul class="list-unstyled"> Lista projektów:
         <li>
