--- a/views/template/index.ejs
+++ b/views/template/index.ejs
@@ -30,12 +30,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap"
         rel="stylesheet">
     <!-- stylesheets -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/public/assets/styles/template.css">
 
 </head>
 
 <body>
-
+    <%- include('../partials/navbarHome') %>
     <section id="title" class="colored-section">
         <div class="container-fluid">
             <!-- Nav Bar -->
@@ -74,7 +74,7 @@
                         <i class="fab fa-apple"></i> Button Two</button>
                 </div>
                 <div class="col-lg-6 col-md-4 col-sm-3">
-                    <img id='the-image' src="images/homer.png" alt="iphone-mockup">
+                    <img id='the-image' src="/public/assets/images/templata/homer.png" alt="iphone-mockup">
                 </div>
             </div>
         </div>
@@ -111,17 +111,17 @@
             <div class="carousel-inner">
                 <div class="testimonial carousel-item active container-fluid">
                     <h2 class="testimonial-comment">"Some fake comments from fake, smart looking users"</h2>
-                    <img class="testimonial-image" src="images/paniDoctor.png" alt="dog-profile">
+                    <img class="testimonial-image" src="/public/assets/images/templata/paniDoctor.png" alt="dog-profile">
                     <span><em class='testimonial-author'> Dr Ying Yang, Wieliczka</em></span>
                 </div>
                 <div class="testimonial carousel-item container-fluid">
                     <h2 class="testimonial-comment">"Another smart comment from a smart person"</h2>
-                    <img class="testimonial-image" src="images/engineer.jpg" alt="dog-profile">
+                    <img class="testimonial-image" src="/public/assets/images/templata/engineer.jpg" alt="dog-profile">
                     <span><em class='testimonial-author'> Dr Ling Wing, Radom</em></span>
                 </div>
                 <div class="testimonial carousel-item container-fluid">
                     <h2 class="testimonial-comment">"And yet another one..."</h2>
-                    <img class="testimonial-image" src="images/oldman.jpg" alt="dog-profile">
+                    <img class="testimonial-image" src="/public/assets/images/templata/oldman.jpg" alt="dog-profile">
                     <span><em class='testimonial-author'> Mr Ping Pong, Hong Kong</em></span>
                 </div>
             </div>
@@ -148,10 +148,10 @@
 
     <section id="brands" class="colored-section">
 
-        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="images/mcd.png" alt="logo">
-        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="images/shell.png" alt="logo">
-        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="images/netflix.png" alt="logo">
-        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="images/Amazon.png" alt="logo">
+        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="/public/assets/images/templata/mcd.png" alt="logo">
+        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="/public/assets/images/templata/shell.png" alt="logo">
+        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="/public/assets/images/templata/netflix.png" alt="logo">
+        <img class="brand-logos col-lg-3 col-md-4 col-sm-6" src="/public/assets/images/templata/Amazon.png" alt="logo">
 
     </section>
 
@@ -163,25 +163,25 @@
         <div id="pricingCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="pricing-plan carousel-item active container-fluid">
-                    <img class="d-block w-100" src="images/mieszko.jpg" alt="">
+                    <img class="d-block w-100" src="/public/assets/images/templata/mieszko.jpg" alt="">
                     <h3 class="pricing-name"> Mieszko </h3>
                     <h2>Free</h2>
                     <p>You probably got nothing here</p>
                 </div>
                 <div class="pricing-plan carousel-item container-fluid">
-                    <img class="d-block w-100" src="images/kazek.jpg" alt="">
+                    <img class="d-block w-100" src="/public/assets/images/templata/kazek.jpg" alt="">
                     <h3 class="pricing-name"> Kazek </h3>
                     <h2>49.99PLN</h2>
                     <p>better this than nothing</p>
                 </div>
                 <div class="pricing-plan carousel-item container-fluid">
-                    <img class="d-block w-100" src="images/jagiello.jpg" alt="">
+                    <img class="d-block w-100" src="/public/assets/images/templata/jagiello.jpg" alt="">
                     <h3 class="pricing-name"> Włodek </h3>
                     <h2>100PLN</h2>
                     <p>Whatever you need</p>
                 </div>
                 <div class="pricing-plan carousel-item container-fluid">
-                    <img class="d-block w-100" src="images/zygmunt.jpg" alt="">
+                    <img class="d-block w-100" src="/public/assets/images/templata/zygmunt.jpg" alt="">
                     <h3 class="pricing-name">Zygmunt Stary</h3>
                     <h2>200PLN</h2>
                     <p>You just overpaid</p>
