--- a/views/widoczki/new.ejs
+++ b/views/widoczki/new.ejs
@@ -1,11 +1,11 @@
 <% layout('layouts/boilerplateWidoczki') %>
     <div class="row">
         <h1 class="text-center">
-            Nowy widoczek
+            Dodaj nowy widoczek:
         </h1>
         <div class="col-6 offset-3">
 
-            <h1> Dodaj nowy Widok</h1>
+            
             <form action="/widoczki" method="POST" novalidate class="validated-form">
                 <!-- NAZWA -->
                 <div class="mb-3">
