--- a/views/layouts/boilerplateKeynotes.ejs
+++ b/views/layouts/boilerplateKeynotes.ejs
@@ -48,7 +48,6 @@
         <main class="container"></main>
         <%- body %>
             </main>
-            <footer class="footer"> Daniel Badura Portfolio Project® 2021</footer>
             <script src="/public/assets/scripts/keynotes.js"></script>
             <script src="https://code.jquery.com/jquery-3.6.0.js"
                 integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -59,6 +58,7 @@
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
                 integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
                 crossorigin="anonymous"></script>
+                <%- include('../partials/footer') %>
 </body>
 
 </html>
