--- a/views/partials/navbarHome.ejs
+++ b/views/partials/navbarHome.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
-    <div class="container-fluid flame-text" >
+<nav  class="navbar navbar-expand-lg navbar-blue bg-dark">
+    <div id='navbarHome' class="container-fluid flame-text" >
         <a class="navbar-brand" href="/">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
