--- a/views/widoczki/show.ejs
+++ b/views/widoczki/show.ejs
@@ -12,8 +12,8 @@
                     </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <%= widoczek.location %>
+                    <li class="list-group-item"><h5>
+                        <%= widoczek.location %></h5>
                     </li>
                     <li class="list-group-item">
                         <%= widoczek.price %> € za jedno spojrzenie
