added flash messeges to the widoczki project

--- a/views/layouts/boilerplateWidoczki.ejs
+++ b/views/layouts/boilerplateWidoczki.ejs
@@ -17,6 +17,7 @@
     
        <%- include('../partials/navbarWidoczki') %>
     <main class="container">
+        <%- include('../partials/flash') %>
         <%- body %>
     </main>
 
