added basic authorization to widoczki project

--- a/public/assets/styles/home.css
+++ b/public/assets/styles/home.css
@@ -32,3 +32,17 @@ h1{
 .navbar{
   margin-bottom:1rem;
 }
+.nav-link:hover{
+  transition: 1s;
+  color:white;
+  transform: scale(110%);
+}
+.navbar-brand:hover{
+  transition: 1s;
+  color:white;
+  transform: scale(110%);
+  
+}
+#name-tag{
+  color:yellow;
+}
