--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,15 @@
 <% layout('layouts/boilerplateHome') %>
-  <form class="container " action="/login" method="POST" novalidate class='validated-form'>
+<div class="col-6 offset-3">
+<form class="container " action="/login" method="POST" novalidate class='validated-form'>
     <div class="form-group mb-3">
-      <label for="exampleInputEmail1">Nazwa użytkownika</label>
+      
+      <label for="email">Nazwa użytkownika</label>
       <input type="email" class="form-control" id="username" placeholder="Wprowadź nazwę użytkownika" name='username'>
     </div>
     <div class="form-group mb-3">
-      <label for="exampleInputPassword1">Hasło</label>
+      <label for="password">Hasło</label>
       <input type="password" class="form-control" id="password" placeholder="Hasło" name='password'>
     </div>
     <button type="submit" class="btn btn-primary">Zatwierdź</button>
   </form>
+</div>  
