--- a/views/partials/navbarHome.ejs
+++ b/views/partials/navbarHome.ejs
@@ -1,25 +1,21 @@
-<nav  class="navbar navbar-expand-lg navbar-blue bg-dark">
-    <div id='navbarHome' class="container-fluid flame-text" >
+<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
+    <div id='navbarHome' class="container-fluid">
         <a class="navbar-brand" href="/">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div  class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav" >
-                <!-- <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./">Strona Główna</a>
-                </li> -->
-                <li class="nav-item">
-                    <a class="nav-link " href="./login">logowanie</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="./register">rejestracja</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="" tabindex="-1" aria-disabled="true">o mnie</a>
-                </li>
-            </ul>
+        <div class="collapse navbar-collapse" id="navbarNav">
+                    <a class="nav-link " href="">o mnie</a>
+                <div class='navbar-nav ms-auto flex-nowrap'>
+                    <% if(!currentUser) {%> 
+                    <a class="nav-link " href="/login">logowanie</a>
+                    <a class="nav-link " href="/register">rejestracja</a>
+                    <% } else { %> 
+                        <a class="nav-link disabled" id="name-tag" href="/logout "><%= currentUser.username %> </a> 
+                    <a class="nav-link " href="/logout ">wyloguj</a>
+                    <% } %> 
+                </div>
         </div>
     </div>
 </nav>
