--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/boilerplateHome') %>
-
+<div class="col-6 offset-3">
   <form class="container needs-validation" action="/register" method="POST" novalidate >
     <h1>Rejestracja</h1>
     <div class="form-group mb-3">
@@ -17,17 +17,31 @@
       <label class='form-label' for="email">E-mail</label>
       <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
         placeholder="Wprowadź adres E-mail" name='email' required>
-    </div>
+    
+    <div class="valid-feedback green">
+      Dobrze!
+  </div>
+  <div class="invalid-feedback green">
+    Wymagany adres email
+  </div></div>
     <div class="form-group mb-3">
       <label class='form-label' for="password">Hasło</label>
       <input type="password" class="form-control" id="password" placeholder="Hasło" name='password' required>
-    </div>
+   
+    <div class="valid-feedback green">
+      Dobrze!
+  </div>
+  <div class="invalid-feedback green">
+    Wymagane hasło
+  </div>
+</div>
     <div class="form-group mb-3">
-      <label class='form-label' for="password2">Powtórz hasło</label>
-      <input type="password" class="form-control" id="password2" placeholder="Powtórz hasło" required>
+      <label class='form-label' for="confirm_password">Powtórz hasło</label>
+      <input type="password" class="form-control" id="confirm_password" placeholder="Powtórz hasło" name="confirm_password" required>
     </div>
     <button type="submit" class="btn btn-success">Zatwierdź</button>
   </form>
+</div>
   <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
     (function () {
