--- a/views/template/index.ejs
+++ b/views/template/index.ejs
@@ -35,14 +35,13 @@
 </head>
 
 <body>
-    <%- include('../partials/navbarHome') %>
     <section id="title" class="colored-section">
         <div class="container-fluid">
             <!-- Nav Bar -->
 
             <nav id="navbar" class="navbar navbar-expand-lg navbar-dark">
                 <!-- <nav id="navbar" class="navbar bg-dark navbar-expand-lg navbar-dark"> -->
-                <a class="navbar-brand" href="">Daniel's Portfolio</a>
+                <a class="navbar-brand" href="/">Daniel's Portfolio</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
