--- a/views/widoczki/show.ejs
+++ b/views/widoczki/show.ejs
@@ -16,25 +16,29 @@
                         <%= widoczek.location %></h5>
                     </li>
                     <li class="list-group-item">
-                        <%= widoczek.price %> € za jedno spojrzenie
+                        <h6>Cena</h6>
+                        <%= widoczek.price %>€ za jedno spojrzenie
                     </li>
                     <li class="list-group-item">
-                        tu coś dodam
+                        <h6>Autor</h6>
+                        <%= widoczek.author %> 
                     </li>
                 </ul>
+                <% if(currentUser==widoczek.author) {%> 
                 <div class="card-body">
                     <a class="card-link btn btn-info" href="/widoczki/<%= widoczek._id %>/edit">Edytuj Widoczek</a>
                     <form class="d-inline" action="/widoczki/<%=widoczek._id%>?_method=DELETE" method="POST">
                         <button class="btn btn-danger ">Usuń Widoczek</button>
                     </form>
                 </div>
+                <% } %> 
             </div>
 
 
         </div>
         <div class="col-6">
             <h2>Zostaw opinię:</h2>
-            <form action="/widoczki/<%= widoczek._id %>/reviews" method="POST" novalidate class='validated-form'>
+            <form action="/widoczki/<%= widoczek._id %>" method="POST" novalidate class='validated-form'>
                 <div class='mb-3'>
                     <label for="body" class="form-label">Ocena</label>
                     <input name='review[rating]' id='rating' class='form-range' type="range" min='1' max='5'>
@@ -43,28 +47,42 @@
                     <label for="body" class="form-label">Opinia</label>
                     <textarea name="review[body]" id='body' class="form-control" cols="30" rows="10"
                         required></textarea>
-
                 </div>
+                <% if(currentUser){ %>
+                    <div class="mb-3">
+                        <label class="form-label" for="author">Zalogowany jako:</label>
+                        <input class="form-control disabled" type="text" id="author" name="review[author]" value='<%= currentUser.username %>' required readonly></input>
+                        <div class="valid-feedback green">
+                            Dobrze!
+                        </div>
+                    </div>
+                    <% } %>
+
 
                 <button id="review" type="submit" class='btn btn-success'>Dodaj Opinię</button>
             </form>
 
             <% for (let review of widoczek.reviews){ %>
+               
+                
                 <div class="card review">
                     <div class="mb-3 card-body">
                         <div class="card-body">
-                            <h5>Ocena: <%= review.rating %>
-                            </h5>
+                            <h5 class="review-author"><%= review.author %></h5>
+                            <h6>Ocena: <%= review.rating %>
+                            </h6>
                         </div>
-                        <div class="card-text">
+                        <div class="card-text review-text">
                             <%= review.body %>
                         </div>
+                        <% if(currentUser.username== review.author) {%> 
                         <div>
                             <form action="/widoczki/<%= widoczek._id %>/reviews/<%= review._id %>?_method=DELETE"
-                                method="POST">
-                                <button class=" btn btn-sm btn-danger removeReview"> Usuń Opinię </button>
+                                method="POST">                                
+                                <button class=" btn btn-sm btn-danger removeReview"> Usuń Opinię </button>                            
                             </form>
                         </div>
+                        <% } %> 
                     </div>
                 </div>
                 <% } %>
