--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -7,6 +7,6 @@
 <% if(error && error.length){ %>
     <div class="alert alert-danger alert-dismissible fade show text-center" role="alert">
         <strong> <%= error %></strong>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        <button type="button" class="btn-close close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
 <% } %>
