--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 
-<footer class="footer bg-dark py-5">
+<footer class="footer bg-dark py-5" id='footer'>
     <div class="container">
         <span class="text-muted">&copy; DB Portfolio Project 2021 </span>
     </div>
