--- a/views/keynotes/index.ejs
+++ b/views/keynotes/index.ejs
@@ -3,22 +3,27 @@
   <div>
 
     <ul class="set">
-      <li id="c" class="white c note">a</li>
-      <li id="cs" class="black ds note">w</li>
-      <li id="d" class="white d note">s</li>
-      <li id="ds" class="black cs note">e</li>
-      <li id="e" class="white c note">d</li>
-      <li id="f" class="white b note">j</li>
-      <li id="fs" class="black as note">i</li>
-      <li id="g" class="white a note">k</li>
-      <li id="gs" class="black gs note">o</li>
-      <li id="a" class="white g note">l</li>
-      <li id="as" class="black fs note">p</li>
-      <li id="b" class="white f note">;</li>
+      <li id="a" class="white a note">a</li>
+      <li id="w" class="black w note">w</li>
+      <li id="s" class="white s note">s</li>
+      <li id="e" class="black e note">e</li>
+      <li id="d" class="white d note">d</li>
+      <li id="f" class="white f note">f</li>
+      <li id="t" class="black t note">t</li>
+      <li id="g" class="white g note">g</li>
+      <li id="y" class="black y note">y</li>
+      <li id="h" class="white h note">h</li>
+      <li id="u" class="black u note">u</li>
+      <li id="j" class="white j note">j</li>
+      <li id="k" class="white k note">k</li>
+      <li id="o" class="black o note">o</li>
+      <li id="l" class="white l note">l</li>
+      <li id="p" class="black p note">p</li>
+      <li id="px" class="white px note">;</li>
     </ul>
     <div class="volume">volume:
       <input id="vol-control" class="form-range" type="range" min="0" max="100" step="1" value="20"></input>
-    </div>
+    </div>                 
 
 
     <div>
@@ -28,7 +33,7 @@
     </div>>
 
   </div>
-  <div class="fluid">
+  <div class="container">
     <div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75"
         aria-valuemin="0" aria-valuemax="100"></div>
@@ -43,8 +48,12 @@
       <button id="stop" class="btn btn-lg btn-outline-light record control-button hide">STOP</button>
       <button id="play-record" class="btn btn-lg btn-outline-light record control-button hide">PLAY REC.</button>
       <button id="back" class="btn btn-lg btn-outline-light record control-button hide">BACK</button>
+      <form id='save-form' action="/keynotes" method="POST">
+        <input type="text" class='hide' id="player-score" name="keynotes[score]">
+        <input type="text" class='hide' id="player-recording" name="keynotes[record]" value="">
+        <input type="text" class='hide' id="player-name" name="keynotes[user]" value="<% if(currentUser){%><%= currentUser.username %><% }else { %><%= " unknown" %><% } %>">
+        <button id="save" class="btn btn-lg btn-outline-light control-button hide" type="submit">Save</button>
+
+      </form>
     </div>
   </div>
-
-  <footer>
-  </footer>
