--- a/views/partials/navbarKeynotes.ejs
+++ b/views/partials/navbarKeynotes.ejs
@@ -11,7 +11,7 @@
                     <a class="nav-link active" aria-current="page" href="./">Strona Główna</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="">Key</a>
+                    <a class="nav-link " href="/keynotes/scoreboard">Wyniki</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="">Notes</a>
