--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,22 +1,26 @@
 <% layout('layouts/boilerplateHome') %>
-<div class="main-container">
-    <h1 class="flame-text">Daniel Badura</h1>
-
-    <ul class="list-unstyled"> Lista projektów:
-        <li>
-            <a href="/widoczki">Widoczki</a>
-        </li>
-        <li>
-            <a href="/keynotes/">Keynotes</a>
-        </li>
-        <li>
-            <a href="/calculator">Kalkulator</a>
-        </li>
-        <li>
-            <a href="/template">Templata</a>
-        </li>
-        <li>
-            <a href="/"> </a>
-        </li>
-    </ul>
-</div>
+    <div class="main-container ">
+        <h1 class="flame-text">Daniel Badura</h1>
+        <div class="row">
+            <div class='card col-6'>
+                <div class='card-title'></div>
+                <a href="/widoczki">Widoczki</a>
+            </div>
+            <div class='card col-6'>
+                <div class='card-title'></div>
+                <a href="/keynotes/">Keynotes</a>
+            </div>
+            <div class='card col-6'>
+                <div class='card-title'></div>
+                <div class='card-title'></div>
+                <a href="/calculator">Kalkulator</a>
+            </div>
+            <div class='card col-6'>
+                <div class='card-title'></div>
+                <a href="/template">Templata</a>
+            </div>
+            <div class='card col-6'>
+                <a href="/"> </a>
+            </div>
+        </div>
+    </div>
