--- a/views/widoczki/new.ejs
+++ b/views/widoczki/new.ejs
@@ -63,7 +63,7 @@
                     </div>
                     <% } %>
                         <!-- PRZYCISK -->
-                        <button class="btn btn-success">Dodaj Widoczek</button>
+                        <button class="btn btn-outline-dark ">Dodaj Widoczek</button>
             </form>
             <p></p>
             <a class="mb-3" href="/widoczki">Pokaż wszystkie widoczki</a>
