--- a/views/partials/navbarWidoczki.ejs
+++ b/views/partials/navbarWidoczki.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-blue bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -6,18 +6,22 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <a class="nav-link active" aria-current="page" href="/widoczki/home">Strona Główna</a>
-            <a class="nav-link" href="/widoczki">Widoczki</a>
+
+            <a class="nav-link" href="/widoczki">Wszystkie Widoczki</a>
+            <a class="nav-link" aria-current="page" href="/widoczki/home">Moje Widoczki</a>
             <a class="nav-link" href="/widoczki/new">Dodaj Widoczek</a>
-        </div>
-        <div class='navbar-nav ms-auto'>
-            <% if(!currentUser) {%> 
-            <a class="nav-link " href="/login">logowanie</a>
-            <a class="nav-link " href="/register">rejestracja</a>
-            <% } else { %> 
-                <a class="nav-link disabled" id="name-tag" href="/logout "><%= currentUser.username %> </a> 
-            <a class="nav-link " href="/logout ">wyloguj</a>
-            <% } %> 
+
+            <div class='navbar-nav ms-auto'>
+                <% if(!currentUser) {%>
+                    <a class="nav-link " href="/login">logowanie</a>
+                    <a class="nav-link " href="/register">rejestracja</a>
+                    <% } else { %>
+                        <a class="nav-link disabled" id="name-tag" href="/logout ">
+                            <%= currentUser.username %>
+                        </a>
+                        <a class="nav-link " href="/logout ">wyloguj</a>
+                        <% } %>
+            </div>
         </div>
     </div>
 </nav>
