--- a/views/widoczki/home.ejs
+++ b/views/widoczki/home.ejs
@@ -1,4 +1,33 @@
 <% layout('layouts/boilerplateWidoczki') %>
-<h1> 
-    To będzie strona główna Widoczki
-</h1>
+    <h1 id='widoczki-title'>
+        Moje Widoczki
+    </h1>
+
+    <% for (let widoczek of widoczki) {%>
+        <div class="card">
+            <div class="row">
+                <div class="col-md-6">
+                    <img class="img" src="<%= widoczek.image %>">
+
+                    </a>
+                </div>
+                <div class="col-md-6">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= widoczek.name %>
+                        </h5>
+                        <p class="card-text dancing-script">
+                            <%= widoczek.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <%= widoczek.location %>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/widoczki/<%= widoczek._id %>">Przejdź do <%= widoczek.name
+                                %></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <% }%>
