--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
   <form class="container needs-validation" action="/register" method="POST" novalidate >
     <h1>Rejestracja</h1>
     <div class="form-group mb-3">
-    <label for="exampleInputEmail1">Nazwa użytkownika</label>
+    <label for="username">Nazwa użytkownika</label>
     <input type="text" class="form-control" id="username" placeholder="Wprowadź nazwę użytkownika" name='username'
       required>
       <div class="valid-feedback green">
